
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
                            xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
<modelVersion>4.0.0</modelVersion>
<packaging>pom</packaging>
    
    <groupId>com.javax0.geci</groupId>
    <artifactId>javageci-parent</artifactId>
    <version>1.1.2-SNAPSHOT</version>

    <name>javageci-parent</name>
    <description>Java GEnerate Code Inline source code generation framework</description>
    <modules>
<module>javageci-engine</module>
<module>javageci-api</module>
<module>javageci-tools</module>
<module>javageci-core</module>
<module>javageci-annotation</module>
<module>javageci-examples</module>
<module>javageci-jamal</module>
<module>javageci-core-annotations</module>
</modules>
    <licenses>
<license>
    <name>The Apache License, Version 2.0</name>
    <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
</license>
</licenses>
       <developers>
                                         <developer>
                                             <name>Peter Verhas</name>
                                             <email>peter@verhas.com</email>
                                         </developer>
                                     </developers>
        <scm>
                                             <connection>scm:git:git://github.com/verhas/javageci.git</connection>
                                             <developerConnection>scm:git:ssh://github.com/verhas/javageci.git</developerConnection>
                                             <url>https:/github.com/verhas/javageci/tree/master</url>
                                         </scm>
                                         <url>https:/github.com/verhas/javageci/tree/master</url>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
    <build><pluginManagement><plugins>
                <plugin>
                    
    <groupId>org.apache.maven.plugins</groupId>
    <artifactId>maven-surefire-plugin</artifactId>
    <version>2.19.1</version>

                    <dependencies>
                        
<dependency>
    <groupId>org.junit.platform</groupId>
    <artifactId>junit-platform-surefire-provider</artifactId>
    <version>1.0.3</version>
</dependency>
                        
<dependency>
    <groupId>org.junit.jupiter</groupId>
    <artifactId>junit-jupiter-engine</artifactId>
    <version>5.2.0</version>
</dependency>
                    </dependencies>
                </plugin>
                <plugin>
                    
    <groupId>org.apache.maven.plugins</groupId>
    <artifactId>maven-source-plugin</artifactId>
    <version>3.0.1</version>

                    <executions>
                        <execution>
                            <id>attach-sources</id>
                            <goals>
                                <goal>jar</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    
    <groupId>org.apache.maven.plugins</groupId>
    <artifactId>maven-javadoc-plugin</artifactId>
    <version>3.1.0</version>

                    <configuration>
                        <detectLinks>false</detectLinks>
                    </configuration>
                    <dependencies>
<dependency>
    <groupId>org.ow2.asm</groupId>
    <artifactId>asm</artifactId>
    <version>7.0</version>
</dependency></dependencies>
                    <executions><execution>
                            <id>attach-javadocs</id>
                            <goals><goal>jar</goal></goals></execution></executions>
                </plugin>
                <plugin>
                    
    <groupId>org.apache.maven.plugins</groupId>
    <artifactId>maven-compiler-plugin</artifactId>
    <version>3.8.0</version>

                    <configuration>
                        <release>11</release>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
    <dependencyManagement><dependencies>
        
<dependency>
    <groupId>com.javax0.geci</groupId>
    <artifactId>javageci-api</artifactId>
    <version>1.1.2-SNAPSHOT</version>
</dependency>
<dependency>
    <groupId>com.javax0.geci</groupId>
    <artifactId>javageci-core</artifactId>
    <version>1.1.2-SNAPSHOT</version>
</dependency>
<dependency>
    <groupId>com.javax0.geci</groupId>
    <artifactId>javageci-tools</artifactId>
    <version>1.1.2-SNAPSHOT</version>
</dependency>
<dependency>
    <groupId>com.javax0.geci</groupId>
    <artifactId>javageci-engine</artifactId>
    <version>1.1.2-SNAPSHOT</version>
</dependency>
<dependency>
    <groupId>com.javax0.geci</groupId>
    <artifactId>javageci-annotation</artifactId>
    <version>1.1.2-SNAPSHOT</version>
</dependency>
        
<dependency>
<groupId>org.junit.jupiter</groupId>
<artifactId>junit-jupiter-api</artifactId>
<version>5.2.0</version>
<scope>test</scope>
</dependency>
<dependency>
<groupId>org.junit.jupiter</groupId>
<artifactId>junit-jupiter-engine</artifactId>
<version>5.2.0</version>
<scope>test</scope>
</dependency>
        </dependencies></dependencyManagement>
</project>

